--- a/TaskAssistant/AddTask.xaml
+++ b/TaskAssistant/AddTask.xaml
@@ -279,8 +279,8 @@
         </Border>
         <StackPanel>
             <!--<TextBlock Text="Node" Foreground="White" FontSize="20" Margin="20 10 0 0"/>-->
-            <TextBox x:Name="Node" 
-                     Tag="Node" 
+            <TextBox x:Name="Note" 
+                     Tag="Note" 
                      FontSize="25" 
                      Foreground="#699cfc" 
                      Margin="30 30" 
@@ -295,7 +295,7 @@
                 <Calendar x:Name="Calend" 
                             Grid.Column="0" 
                           Background="White"
-                            SelectedDate="{Binding date}"
+                            SelectedDate="{Binding Date}"
                             IsTodayHighlighted="True"
                           Margin="10"/>
 
@@ -305,21 +305,21 @@
                     <StackPanel >
                         <TextBlock Text="Hour" Style="{StaticResource TimeText}"/>
                         <ComboBox x:Name="HourBox"
-                  ItemsSource="{Binding hours}"
-                  SelectedValue="{Binding currHour}"/>
+                  ItemsSource="{Binding Hours}"
+                  SelectedValue="{Binding CurrHour}"/>
                     </StackPanel>
                     <StackPanel   >
                         <TextBlock Text="Minute" Style="{StaticResource TimeText}"/>
                         <ComboBox x:Name="MinuteBox"
-                  ItemsSource="{Binding minutes}"
-                  SelectedValue="{Binding currMinute}"/>
+                  ItemsSource="{Binding Minutes}"
+                  SelectedValue="{Binding CurrMinute}"/>
                     </StackPanel>
                 </StackPanel>
                 <StackPanel Grid.Column="3" >
                     <TextBlock Text="Пріорітет" Style="{StaticResource Text}"/>
                     <ComboBox x:Name="PriorityBox"
-                  ItemsSource="{Binding priorities}"
-                  SelectedValue="{Binding priority}"/>
+                  ItemsSource="{Binding Priorities}"
+                  SelectedValue="{Binding Priority}"/>
                 </StackPanel>
 
 
